# social-media-ai-engineering-etl

./: .gitignore  1-find-gradient.py  10-tone-micro-ablation.py  11-extract-opinion.py  12-clean-opinions.py  13-opinion-micro-ablation.py  14-extract-context.py  15-clean-context.py  16-context-micro-ablation.py  17-writing-style.py  18-generate-prompts.py  19-scenario-based-prompt-test.py  2-label.py  20-permutation-and-correlation.py  21-embedding-and-clustering.py  22-generate-dataset.py  23-split.py  24-add-negatives.py  25-train-sft.py  26-train-grpo.py  27-experiment.py  3-extract-structures.py  4-structure-micro-ablation.py  5-balance.py  6-extract-topics.py  7-clean-topics.py  8-topic-micro-ablation.py  9-extract-tone.py  LICENSE  Makefile  README.md  clean_jsonl.py  example-dataset.jsonl  pyproject.toml  schemas.py
app/: score_app.py
features/: bullets.py  context.py  dividers.py  narrative.py  phrases.py  profanity.py  text_stats.py
orchestration/: prefect_flow.py
scripts/: evaluate_rewards.py  setup_nlp.py
tests/: conftest.py  smoke_etl.sh  test_features_bullets_dividers.py  test_features_narrative.py  test_grpo_utils.py  test_integration_01_02.py  test_integration_pipeline.py  test_manifest_skip_version.py  test_rewards.py  test_run_id_and_discovery.py  test_split_determinism.py  test_violations.py
training/grpo/: data.py  model.py  nlp_setup.py  prompt_parsing.py  rewards.py  scenarios.py  trainer.py
training/rewards/: aggregator.py  base.py  bullet_style.py  divider.py  emoji.py  emoji_variety.py  fabrication.py  hashtags.py  language.py  length.py  linebreaks.py  narrative.py  punctuation.py  semantic.py  structure.py  tone.py  topics.py  vocabulary.py  weights.example.json
utils/: artifacts.py  cli.py  contracts.py  io.py  logging_setup.py  manifest.py  reports.py  run_id.py  seed.py  validation.py  version.py  violations.py
