[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipe"
version = "0.1.0"
description = "Sequential ETL and training pipeline with manifest-driven reproducibility"
requires-python = ">=3.9"
readme = "README.md"
authors = [{name = "Your Name"}]

# Core dependencies for 17→23 backbone and utilities (pinned)
dependencies = [
  "pandas==2.1.4",
  "numpy==1.24.4",
  "tqdm==4.67.1",
  "spacy==3.8.2",
  "nltk==3.9.1",
  "transformers==4.51.3",
  "torch==2.7.1",
  "scikit-learn==1.3.2",
  "umap-learn==0.5.7",
  "emojis==0.7.0",
  "pyarrow==19.0.1",
]

[project.optional-dependencies]
# Optional extras (pinned)
validation = [
  "pandera==0.18.3",
]
augmentation = [
  "nlpaug==1.1.11",
]
# Evaluation/plots (optional runtime)
eval = [
  "matplotlib==3.8.2",
  "seaborn==0.13.2",
]
# Demo/orchestration (optional runtime)
demo = [
  "streamlit==1.32.2",
  "prefect==2.16.5",
]
# Developer tooling
dev = [
  "ruff==0.11.8",
  "black==23.11.0",
  "isort==5.12.0",
  "mypy==1.7.1",
  "pytest==7.4.3",
]

[tool.setuptools]
packages = ["utils", "features", "training", "orchestration", "scripts"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

