[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipe"
version = "0.2.0"
description = "Sequential ETL and training pipeline with manifest-driven reproducibility"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Jacob Warren" }]

# Modern, NumPy-2 compatible ranges
dependencies = [
  "numpy>=2.2,<3",            # NumPy 2 ABI
  "pandas>=2.2.2,<3",         # first pandas generally compatible w/ NumPy 2
  "scikit-learn>=1.5,<2",     # NumPy 2 support starts 1.4.2/1.5
  "transformers>=4.51,<5",
  "torch>=2.5,<3",            # 2.7 works great w/ NumPy 2; keep a cushion
  "spacy>=3.8,<4",            # 3.8.x is NumPy-2 ready; see note below
  "umap-learn>=0.5.7,<0.6",
  "tqdm>=4.67,<5",
  "nltk>=3.9,<4",
  "emojis>=0.7,<1",
  "vllm>=0.10.1.1",
  "matplotlib>=3.10.5",
  "seaborn>=0.13.2",
  "sentence_transformers>=5.1.0",
  "nlpaug>=1.1.11",
  "unsloth",
  "pyarrow>=19,<22"           # Arrow 19+ is current & stable
]

[project.optional-dependencies]
# Validate against modern pandas
validation = [
  "pandera>=0.18,<0.20"
]

# Data augmentation
augmentation = [
  "nlpaug>=1.1,<2"
]

# Plots (NumPy-2 compatible)
eval = [
  "matplotlib>=3.8,<3.11",    # 3.8+ works with NumPy 2
  "seaborn>=0.13,<0.14"
]

# Demo/orchestration
demo = [
  "streamlit>=1.32,<2",
  "prefect>=2.16,<3"
]

# Dev tooling (loosened a bit)
dev = [
  "ruff>=0.1.8,<1",
  "black>=23.11,<25",
  "isort>=5.12,<6",
  "mypy>=1.7,<2",
  "pytest>=7.4,<9"
]

[tool.setuptools]
packages = ["utils", "features", "training", "orchestration", "scripts"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
